# ChangeLog for games-emulation/dolphin
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/ChangeLog,v 1.34 2015/04/26 19:36:46 twitch153 Exp $

*dolphin-4.0.2-r5 (26 Apr 2015)

  26 Apr 2015; Devan Franchini <twitch153@gentoo.org> +dolphin-4.0.2-r5.ebuild,
  -dolphin-4.0.2-r4.ebuild, dolphin-9999.ebuild:
  Adds webkit USE flag dependency for wxGTK and check to ensure \!>=media-
  video/libav-10 bug #546602

  18 Apr 2015; Sven Wegener <swegener@gentoo.org> dolphin-3.5-r1.ebuild,
  dolphin-4.0-r1.ebuild, dolphin-4.0.2-r4.ebuild:
  Rename distfile to include package name.

  09 Mar 2015; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Removes preservation of polarssl bundled libs, it's no longer necessary

  09 Mar 2015; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Preserves enet bundled libs, bug #542608

*dolphin-4.0.2-r4 (09 Feb 2015)

  09 Feb 2015; Devan Franchini <twitch153@gentoo.org> +dolphin-4.0.2-r4.ebuild,
  -dolphin-4.0.2-r3.ebuild, dolphin-9999.ebuild:
  Modifies sed regexs to remove optional features, bug #539148

*dolphin-4.0.2-r3 (08 Feb 2015)
*dolphin-3.5-r1 (08 Feb 2015)
*dolphin-4.0-r1 (08 Feb 2015)

  08 Feb 2015; Devan Franchini <twitch153@gentoo.org> +dolphin-3.5-r1.ebuild,
  +dolphin-4.0-r1.ebuild, +dolphin-4.0.2-r3.ebuild, -dolphin-3.5.ebuild,
  -dolphin-4.0.2-r2.ebuild, -dolphin-4.0.ebuild, dolphin-9999.ebuild:
  Adds subslotting to readline RDEPEND package

  08 Feb 2015; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Adds save for xxhash bundled binary

*dolphin-4.0.2-r2 (16 Jan 2015)

  16 Jan 2015; Devan Franchini <twitch153@gentoo.org> +dolphin-4.0.2-r2.ebuild,
  -dolphin-4.0.2-r1.ebuild:
  Adds media-libs/libsdl2 as dependency, bug #535978

  12 Jan 2015; Devan Franchini <twitch153@gentoo.org> dolphin-9999.ebuild:
  Adds media-libs/libsdl2 as dependency, bug #535978
