@@ -1,10 +1,24 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
 AUX dolphin-emu-3.5-gcc-4.8.patch 6682 SHA256 8f153b45b354d52e084694d285fe49409a47f0738e064ca7ba88b38cbbd6f1ca SHA512 98a2e0435b262af4bcf875ef29d14ed5ae204faebadbed7778cfedb3c9841552ecab83ef932e943c779d634d83f6df6d43a656c5e72732e85827902cb08622aa WHIRLPOOL 7128c98fcd22efde2a8067a28d9b064689fa7a5f81b068313a19e41f4fc659b726293bc00539be725077ff5529276c0769e7acbf8146c2c8d578c3812776d488
 DIST dolphin-3.5.zip 28805192 SHA256 56a55060aa912562e6fac2b114b8ad8019deb419b784a1db555a158a01021037 SHA512 0f3f30084ca4cd72623a33d33fe212c113bb5034c2bfcdc85b7744da48deae63341a42b0eaf0ae7aca7a5ebcdc99ec5bf0c2e32b3badd567602d4fed7d3c8ff6 WHIRLPOOL b2b99ea310b2362c66480e934a8b10ce33b72be347474099f1fe932e26a6d3bc7634b3e8e527f0d1892e5a78af984f2762a92294fe0ea6e2e3cc59bbf953980b
 DIST dolphin-4.0.2.zip 28261421 SHA256 90e49ccd92eddc019bcac3b914bf16ce8d49c59fc2bd165ee02a22ea1a0456da SHA512 cb0c788307e6a0048213a2d947ac44d96b5bab064e5be41ad83c308ab98d0126bb173dd0b8705664f898d02eb571f8cb6d5bd6bfd3bd5e00e70126d04dd1cb99 WHIRLPOOL 5ae2bb04513f91300954cd598555a65527356b5e09d85283cbd8dee1a57a5a068dae8938e25d9a0ac77d6956cd08b33ed12afc774b05208dd432d693e4e2c842
 DIST dolphin-4.0.zip 23439392 SHA256 a698caf05f47a55c30e09d0aab053a412df683de2e139a6348156b03c502a0ec SHA512 02e366c2fa95ab5f37b0a66b94a5b56a632ef81e13febd982d6385cfaf7fa3edb4364180d4b8312e82bc7b8f150d02cde10248996f6a12286a20d684024aca20 WHIRLPOOL 0cb7b28b911111f4b7bf93c56f2dd31d080e7e0418fb53d9cc9093ca995d2c99a1fa7d5d82111e2c8db363e2b07384be39ec0062ab0252233f480b8e45e9304e
 EBUILD dolphin-3.5-r1.ebuild 3999 SHA256 6667a1e6fd3a7ea2e324c2a13987f6acb5b387bc1daeab8f58bf07bd6a4555af SHA512 c1757f965947c625d03c3f6b4cc3475e3396c0e5ee6f0f584a80e55cbef30b3a7959cca91750e368df57285123d4bc7422a4b186a1b95362bef60847d0791d19 WHIRLPOOL 9f44eb196ee1eedf6d4e14a449016b3790a70bc3a33c51393f42d15600ca101dc3c25b9efdd53dbbea5a156489fbb39f8e077e7b2b33ca82b5f5f2b53b8e061b
 EBUILD dolphin-4.0-r1.ebuild 3490 SHA256 9a937e7ff28c7ed4fa864a61f230bac14b1845867226ee5551c3983198e962a8 SHA512 af36b9d9a03c7344f12f3009e178762597ffb739109ddec924af30be05aff511bcba0be8c844386d1630cbfed503f4b34bd7e9a5b0589d08e578273d8f0ccf2d WHIRLPOOL 7293af34fec152ef067fde96234d297fcdb8e81eacce072ea65b5923d624f8143e56bb13b0cb1696c791592f14a3051ed54c29a9fb82d8cd31f7e18f2664d516
-EBUILD dolphin-4.0.2-r5.ebuild 3535 SHA256 b8fce6496b4adf83f818debd1f73e51a20eee25fb648fbd06d82bb8cc39ef1a5 SHA512 db2a4c98fa3149640076eeddecd65afd4edc408a8e26cd27a19d8a0ca35c61d17e06cee74c7e0cd49b704542753d7d0b1e87e79d0048a8fc15d189c9d88674f3 WHIRLPOOL 8d9e985f6a13309f36f2f9db01e635762bddf45edecdcbb17dc637537aabaac6f014e5b0a9aa223cf1702ceeef143f4549d6dff179bb56e5a558197709beb313
-EBUILD dolphin-9999.ebuild 3884 SHA256 e99933c070c7638f90ada48fcf5cf6b29ca5caa465db816ecd893a0682bec0b5 SHA512 f022609ebd19f391b6f6e797137856a68a244d4aeadc5c42078ead2e8799e2210dab303eef9b2f2b38154f33e68f2874c493c5900972f9b596546469227b2252 WHIRLPOOL a006766dfb9f4947fb44f0d25e47fe84a4febf9c562a8f2ee81d9c6fc1b3fe0b2841df658ffc187c2e7eb04cfef01e70c50333aaf57a3c6ee2a43f778db15ce2
-MISC ChangeLog 5927 SHA256 a070a3c1fede7f496894a5c095f9a7ee572984c4886302b7fd63f857f415ff81 SHA512 8c8c1967b8c05abad5cc313afcd4da4d1038f6bfcaa4bbc85a0ed5d427167ba2926d74231a29ecaa97e576448425271fe64caf8c7a53ab5da86983afc9a4d456 WHIRLPOOL cb46bcf31b0357c4263112f49fee16c4f2013131124f9fe960c8d3e00b725b2661cd91126908b802ce3a5c2d62178d299b43ff55cad638f61d1e96e39c4a0054
+EBUILD dolphin-4.0.2-r6.ebuild 3527 SHA256 6fb6ea4b6a8bd3470fb566cb8239df0939933d4fa4378f7f111e9324fbd8c407 SHA512 5a0e5ac5f5bb754dd9d238258baa2c5f15e5c669d2ea25715ce41c64b134cc267126ba475b9d71533f9b8cf92bb15bebfbb6bd9e1addc7b4da95800308e1adfd WHIRLPOOL a008a8beceb981b746a26e3e0bfd9a057ec8540db73dc04b808b39fa1d473a60d9704e4e2c893585a5c359861d9d2844abe900c91bbcadab213f29962a920459
+EBUILD dolphin-9999.ebuild 3876 SHA256 7d0f4d36307de8a2548d0701e2185bc866309532566cd45c89a8ce7d7b2d0040 SHA512 7e8d2ff973698410b649ed6bc7940a15b71c3742919b7291837e5f6444a4e095dfd9b2c03f51244afacebe615defea0e80f5557d79aa568fd802ced95309354e WHIRLPOOL 947e97a16838306e6bd4e6806fd22041232d688fec4c0882949acb4b146ed88f2ea126296d6f0c5e57ed6aac224b17996ddbb88bd4a66163151e5840ac1401ba
+MISC ChangeLog 6149 SHA256 fceda0ce06946d8c470e8f1280052949ee035b9a56299d8bf90af8a7205c47d2 SHA512 9c0abc4ca051eff24d7cdc2b650909a98d4c73070d47ed1e24e77038b26dbdb0e347e923be96cf23c0f93ec75204ca04ebb3ed9302b6a7dccaa533a6da8b09e9 WHIRLPOOL 080b3bece0d96027502fd6b5ed477e90781078cb25a8f6e036527a41645cf9bb1373068ad78e7e089dc57c128fc33d74e40c395a2dc7bbb440bdc20011b8d009
 MISC metadata.xml 442 SHA256 11ac55298ad628e589b592a2da00db1cabfd31ff8621c0fea059d714acdce334 SHA512 96abf53048bb8aea1387eacc40b9cda4e6099f079ddeb669fb23458d67880804fb015970207aa10a21227b87c153208a8dfa4bf4ea279ff7e53dcfebf18ac30e WHIRLPOOL e72458e354da2e4bfeb67de52c31d50a61f3b926fe16c0bcf4aae5e599858e413fcc9057fe1b098e43ee18fabe6a0f05dff008f59065cf34bad02da6480fc120
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2
+
+iQEcBAEBCAAGBQJVQq/wAAoJEEAKp6Qwg9Y3PIEH+wUKg8Rw2KMFWQAH5TFeezl7
+Kd99FGxagofdXWGmwxtwZ6gAkCqtH094dMLkGyE5CUF+SqQlL56EFYRIRSqMC7pN
+JiQZJRiNN3dvboQz4SX/mp9v3RQBgK91zen7Yd03dyWO7yWcczfgjMwDyQZA9CmA
+uy2tPTKurzgujJIE39fG8NgtVQXd4vShAFyXixUj7y9m58HpbgQxdKAXCw8vQI/b
+6xQaAnTMS+K2vYsXsufW8x/aIRC2M5YT0cbW+fuZajVBEztwgG33u8wg5JZOK++9
+cEtUitDsd1M41L3pj10YCEC9ArJkcQTVCBBzgZXoMOH13OqtRixmOg4hAqtkJf8=
+=2QF0
+-----END PGP SIGNATURE-----
