@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install postinst preinst prepare pretend setup test unpack
-DEPEND=>=media-libs/glew-1.10 >=media-libs/libsfml-2.1 >=net-libs/miniupnpc-1.8 sys-libs/readline:= x11-libs/libXext x11-libs/libXrandr media-libs/libsdl2[haptic,joystick] net-libs/polarssl[havege] alsa? ( media-libs/alsa-lib ) ao? ( media-libs/libao ) bluetooth? ( net-wireless/bluez ) ffmpeg? ( virtual/ffmpeg !!>=media-video/libav-10 ) lzo? ( dev-libs/lzo ) openal? ( media-libs/openal ) opengl? ( virtual/opengl ) portaudio? ( media-libs/portaudio ) pulseaudio? ( media-sound/pulseaudio ) app-arch/zip media-gfx/nvidia-cg-toolkit media-libs/freetype media-libs/libsoundtouch >=sys-devel/gcc-4.6.0 x11-libs/wxGTK:3.0[webkit] sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-vcs/git
+DEPEND=>=media-libs/glew-1.10 >=media-libs/libsfml-2.1 >=net-libs/miniupnpc-1.8 sys-libs/readline:= x11-libs/libXext x11-libs/libXrandr media-libs/libsdl2[haptic,joystick] net-libs/polarssl[havege] alsa? ( media-libs/alsa-lib ) ao? ( media-libs/libao ) bluetooth? ( net-wireless/bluez ) ffmpeg? ( virtual/ffmpeg !!>=media-video/libav-10 ) lzo? ( dev-libs/lzo ) openal? ( media-libs/openal ) opengl? ( virtual/opengl ) portaudio? ( media-libs/portaudio ) pulseaudio? ( media-sound/pulseaudio ) app-arch/zip media-gfx/nvidia-cg-toolkit media-libs/freetype media-libs/libsoundtouch >=sys-devel/gcc-4.6.0 x11-libs/wxGTK:3.0 sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 ) dev-vcs/git
 DESCRIPTION=Gamecube and Wii game emulator
 EAPI=5
 HOMEPAGE=https://www.dolphin-emu.org/
@@ -8,4 +8,4 @@ LICENSE=GPL-2
 RDEPEND=>=media-libs/glew-1.10 >=media-libs/libsfml-2.1 >=net-libs/miniupnpc-1.8 sys-libs/readline:= x11-libs/libXext x11-libs/libXrandr media-libs/libsdl2[haptic,joystick] net-libs/polarssl[havege] alsa? ( media-libs/alsa-lib ) ao? ( media-libs/libao ) bluetooth? ( net-wireless/bluez ) ffmpeg? ( virtual/ffmpeg !!>=media-video/libav-10 ) lzo? ( dev-libs/lzo ) openal? ( media-libs/openal ) opengl? ( virtual/opengl ) portaudio? ( media-libs/portaudio ) pulseaudio? ( media-sound/pulseaudio ) games-misc/games-envd
 SLOT=0
 _eclasses_=base	87f7447ccfc06fd0729ff4684e11e0d6	cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	games	1ad3205dbf62a2c98249f2f59b0a2d39	git-2	e28f0d8a9b321431b1e699782851b827	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	pax-utils	dfe060cb70d89757fde5c1ff8405e950	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747	versionator	cd0bcdb170807e4a1984115e9d53a26f	wxwidgets	6d6eec2685256d35511e7b6d5461bec9
-_md5_=6d57941e3dc31ea29d5911892a4b9893
+_md5_=77db3504f1be37ce055a94d29a8e4792
