@@ -1,6 +1,12 @@
 # ChangeLog for games-emulation/dolphin
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/ChangeLog,v 1.34 2015/04/26 19:36:46 twitch153 Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-emulation/dolphin/ChangeLog,v 1.35 2015/04/30 22:42:32 twitch153 Exp $
+
+*dolphin-4.0.2-r6 (30 Apr 2015)
+
+  30 Apr 2015; Devan Franchini <twitch153@gentoo.org> +dolphin-4.0.2-r6.ebuild,
+  -dolphin-4.0.2-r5.ebuild, dolphin-9999.ebuild:
+  Removes unnecessary webkit USE flag dependency for wxGTK
 
 *dolphin-4.0.2-r5 (26 Apr 2015)
 
